tools/vendor/zerocopy/tests/ui-msrv/diagnostic-not-implemented-issue-1296.stderr
error[E0277]: the trait bound `NotZerocopy: Immutable` is not satisfied
  --> tests/ui-msrv/diagnostic-not-implemented-issue-1296.rs:50:19
   |
50 |     Foo.write_obj(NotZerocopy(()));
   |                   ^^^^^^^^^^^^^^^ the trait `Immutable` is not implemented for `NotZerocopy`

error[E0277]: the trait bound `NotZerocopy: IntoBytes` is not satisfied
  --> tests/ui-msrv/diagnostic-not-implemented-issue-1296.rs:50:19
   |
50 |     Foo.write_obj(NotZerocopy(()));
   |                   ^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `NotZerocopy`
